Fix not showing details on mobile

--- a/media/app.css
+++ b/media/app.css
@@ -83,7 +83,7 @@ a {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 40px 10px 20px;
   text-decoration: none;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   color: var(--racmuz-white);
@@ -269,7 +269,7 @@ button.back {
   }
 
   .year {
-    bottom: 10px;
+    top: 25px;
   }
 
   .name {
@@ -307,7 +307,9 @@ button.back {
 
 /** timeline on the map page **/
 
-#slider { width: 100%; }
+#slider {
+  width: 100%;
+}
 
 .slider {
   bottom: 0px;
@@ -318,8 +320,8 @@ button.back {
   background: #d3d3d3;
   outline: none;
   opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
 }
 
 .slider:hover {
@@ -331,20 +333,20 @@ button.back {
   appearance: none;
   width: 50px;
   height: 50px;
-  background: #04AA6D;
+  background: #04aa6d;
   cursor: pointer;
 }
 
 .slider::-moz-range-thumb {
   width: 50px;
   height: 50px;
-  background: #04AA6D;
+  background: #04aa6d;
   cursor: pointer;
 }
 
-#map { 
-  position: absolute; 
-  top: 50px; 
-  bottom: 50px; 
-  width: 100%; 
-} 
+#map {
+  position: absolute;
+  top: 50px;
+  bottom: 50px;
+  width: 100%;
+}
